# Waldo

./: 1-1.txt  1-2.txt  1-3.txt  1-4.txt  README  run_waldo-test.sh  run_waldo.sh  waldo.py
docs/: waldo.bib  waldo.tex
heaptrace/: Makefile  README  heaptrace.cpp  run.sh
outputs/: avltree.Find.txt  dsaac_execs-o.txt  dsaac_execs.txt  judge.py  list.FindPrevious--sll-reverse.exe.list_nodes_in_reverse_order.txt  run_waldo-test.sh  s_b-a2.txt  s_b-k8.txt  s_b-n3-a2.txt  s_b-n3.txt  s_b-o-a2.txt  s_b-o-k4.txt  s_b-o-k8.txt  s_b-o-n3-a2.txt  s_b-o-n3.txt  s_b-o.txt  s_b.txt  src_bin-a2.txt  src_bin-k4-n3.txt  src_bin-k4.txt  src_bin-k8-n3.txt  src_bin-k8.txt  src_bin-n3-a2.txt  src_bin-n3.txt  src_bin-neat.txt  src_bin-o-a2.txt  src_bin-o-k4.txt  src_bin-o-k8.txt  src_bin-o-n3-a2.txt  src_bin-o-n3.txt  src_bin-o.txt  src_bin.txt  test-s_b-k4.txt  test-s_b-k8.txt  test-s_b-n3.txt  test-s_b-n5.txt  test-s_b-n8.txt  test-s_b-o-k4.txt  test-s_b-o-k8.txt  test-s_b-o-n3.txt  (+5 more)
presentation/: waldo.pptx
src/1-1/: fingerprints-training.txt  ngrams.txt
src/1-2/: fingerprints-training.txt  ngrams.txt
src/1-3/: fingerprints-training.txt  ngrams.txt
src/1-4/: ngrams.txt  (+1 more)
test-b/: fingerprints-exe.txt  fingerprints.csv  test16  test4
test-bc/: arraybinsearch-O1.exe.__do_global_ctors_aux.s  arraybinsearch-O1.exe.__do_global_dtors_aux.s  arraybinsearch-O1.exe.__gmon_start__@plt.s  arraybinsearch-O1.exe.__libc_csu_init.s  arraybinsearch-O1.exe.__libc_start_main@plt.s  arraybinsearch-O1.exe._fini.s  arraybinsearch-O1.exe._init.s  arraybinsearch-O1.exe._start.s  arraybinsearch-O1.exe.call_gmon_start.s  arraybinsearch-O1.exe.frame_dummy.s  arraybinsearch-O1.exe.main.s  arraybinsearch-O1.exe.memmove@plt.s  arraybinsearch-O1.exe.printf@plt.s  arraybinsearch-O1.exe.putchar@plt.s  arraybinsearch-O1.exe.s  arraybinsearch-O1.exe.sscanf@plt.s  arraybinsearch-O2.exe.__do_global_ctors_aux.s  arraybinsearch-O2.exe.__do_global_dtors_aux.s  arraybinsearch-O2.exe.__gmon_start__@plt-0x10.s  arraybinsearch-O2.exe.__gmon_start__@plt.s  arraybinsearch-O2.exe.__libc_start_main@plt.s  arraybinsearch-O2.exe._fini.s  arraybinsearch-O2.exe._init.s  arraybinsearch-O2.exe.frame_dummy.s  arraybinsearch-O2.exe.main.s  arraybinsearch-O2.exe.memmove@plt.s  arraybinsearch-O2.exe.printf@plt.s  arraybinsearch-O2.exe.s  arraybinsearch-O3.exe.__libc_csu_init.s  arraybinsearch-O3.exe._start.s  arraybinsearch-O3.exe.call_gmon_start.s  arraybinsearch-O3.exe.putchar@plt.s  arraybinsearch-O3.exe.s  arraybinsearch-O3.exe.sscanf@plt.s  arraybinsearch-Os.exe.__do_global_ctors_aux.s  arraybinsearch-Os.exe.__do_global_dtors_aux.s  arraybinsearch-Os.exe.__gmon_start__@plt-0x10.s  arraybinsearch-Os.exe.__gmon_start__@plt.s  arraybinsearch-Os.exe.__libc_csu_init.s  arraybinsearch-Os.exe.__libc_start_main@plt.s  (+1950 more)
test-s/: fingerprints-lib.txt  ngrams.txt  sll-reverse.c
test-sc/: list-O1.Delete.s  list-O1.DeleteList.s  list-O1.Find.s  list-O1.FindPrevious.s  list-O1.First.s  list-O1.Insert.s  list-O1.IsEmpty.s  list-O1.MakeEmpty.s  list-O2.Delete.s  list-O2.FindPrevious.s  list-O2.First.s  list-O2.Insert.s  list-O2.IsEmpty.s  list-O2.IsLast.s  list-O2.MakeEmpty.s  list-O3.Delete.s  list-O3.DeleteList.s  list-O3.Find.s  list-O3.Header.s  list-O3.Insert.s  list-O3.MakeEmpty.s  list-Os.Advance.s  list-Os.Delete.s  list-Os.DeleteList.s  list-Os.Find.s  list-Os.FindPrevious.s  list-Os.Insert.s  list-Os.IsEmpty.s  list-Os.MakeEmpty.s  list.Delete.s  list.DeleteList.s  list.Find.s  list.FindPrevious.s  list.Header.s  list.Insert.s  list.IsEmpty.s  list.MakeEmpty.s  sll-reverse-O1.add_node.s  sll-reverse-O1.delete_node.s  sll-reverse-O1.list_nodes.s  (+67 more)
tests/: array-stackDispose.list.txt  array-stackPop.list.txt  array-stackPush.list.txt  avl-find.list.txt  avl-findmax.list.txt  avl-findmin.c  avl-findmin.list.txt  avl-insert.c  avl-insert.list.txt  avl-makeempty.list.txt  bst-delete.list.txt  bst-find.list.txt  bst-findmax.c  bst-findmax.list.txt  bst-findmin.list.txt  bst-insert.list.txt  bst-makeempty.c  bst-makeempty.list.txt  genlistings.py  genlistings.py~  list-find.idb  list-find.list.txt  produce_lst.id0  produce_lst.id1  produce_lst.idc  sll-delete.c  sll-delete.c~  sll-delete.idb  sll-delete.list.txt  sll-deletelist.c  sll-find.idb  sll-find.list.txt  sll-insert.c  sll-insert.list.txt  sll-makeempty.idb  sll-makeempty.list.txt  sll-stackDispose.c  sll-stackDispose.list.txt  sll-stackPop.list.txt  sll-stackPush.list.txt  (+3 more)
tests/abl-1.2/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  config.h.in  configure  configure.ac
tests/abl-1.2/doc/: Makefile.am  Makefile.in  abl.info  abl.texi  changelog.texi  list.eps  list.txt  logo.eps  queue.eps  stack.eps
tests/abl-1.2/src/: Makefile.am  Makefile.in  abl.h
tests/abl-1.2/test/: Makefile.am  Makefile.in  genlistings.py  test1.c  test1.o.list.txt  test10.c  test10.o.list.txt  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c  test18.c  test2.c  test2.o.list.txt  test3.c  test3.o.list.txt  test4.c  test4.o.list.txt  test5.c  test5.o.list.txt  test6.c  test6.o.list.txt  test7.c  test7.o.list.txt  test8.c  test8.o.list.txt  test9.c  test9.o.list.txt
(+54 files in other folders)
