# simple list macro.
# Copyright (c)2002-2006 Anton Kulchitsky  mailto:anton@kulchitsky.org
#   a.k.a. atoku   
#
#     ABL is a simple linked list macro definition
#
#     new cvs $Revision: 66 $; $Date: 2008-01-27 23:28:01 -0900 (Sun, 27 Jan 2008) $;
#
#  This library is free software; you can redistribute it and/or
#  modify it under the terms of the GNU Lesser General Public License
#  as published by the Free Software Foundation; either version 2.1
#  of the License, or (at your option) any later version.
#
#  This library is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  Lesser General Public License for more details.
#
#  You should have received a copy of the GNU Lesser General Public
#  License along with this library; if not, write to the Free
#  Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
#  02111-1307 USA


info_TEXINFOS = abl.texi
abl_TEXINFOS = fdl.texi changelog.texi
EXTRA_DIST = logo.png logo.eps logo.pdf list.png list.eps list.pdf list.txt queue.png queue.eps queue.pdf stack.png stack.eps stack.pdf
