# Makefile.am
#	
# (ABL = Abstract Basic List) Lispy list type for different
# data structures. Created to be very flexible.
#
# (c)2006-2007 Anton Kulchitsky  mailto:anton@kulchitsky.org
#   
# new svn $Revision: 21 $; $Date: 2007-11-05 16:17:40 -0900 (Mon, 05 Nov 2007) $;
#
#  This library is free software; you can redistribute it and/or
#  modify it under the terms of the GNU Lesser General Public License
#  as published by the Free Software Foundation; either version 2.1
#  of the License, or (at your option) any later version.
#
#  This library is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  Lesser General Public License for more details.
#
#  You should have received a copy of the GNU Lesser General Public
#  License along with this library; if not, write to the Free
#  Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
#  02111-1307 USA


nobase_include_HEADERS = abl.h
