# Makefile.am
#
# (ABL = Abstract Basic List) Lispy list type for different data
# types.  Created to be very flexible.
#
# (c)2006-2007 Anton Kulchitsky  mailto:anton@kulchitsky.org
#
# new cvs $Revision: 63 $; $Date: 2008-01-27 20:49:42 -0900 (Sun, 27 Jan 2008) $;
#
#  This library is free software; you can redistribute it and/or
#  modify it under the terms of the GNU Lesser General Public License
#  as published by the Free Software Foundation; either version 2.1
#  of the License, or (at your option) any later version.
#
#  This library is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  Lesser General Public License for more details.
#
#  You should have received a copy of the GNU Lesser General Public
#  License along with this library; if not, write to the Free
#  Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
#  02111-1307 USA


AM_CFLAGS = -O2 -Wall -pedantic

noinst_PROGRAMS = test1 test2 test3 test4 test5 test6 test7 \
		test8 test9 test10 test11 test12 test13 test14 \
		test15 test16 test17 test18

test1_SOURCES = test1.c
test2_SOURCES = test2.c
test3_SOURCES = test3.c
test4_SOURCES = test4.c
test5_SOURCES = test5.c
test6_SOURCES = test6.c
test7_SOURCES = test7.c
test8_SOURCES = test8.c
test9_SOURCES = test9.c
test10_SOURCES = test10.c
test11_SOURCES = test11.c
test12_SOURCES = test12.c
test13_SOURCES = test13.c
test14_SOURCES = test14.c
test15_SOURCES = test15.c
test16_SOURCES = test16.c
test17_SOURCES = test17.c
test18_SOURCES = test18.c
